Implementing the logic to issue a book